--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -21,6 +21,11 @@ button {
   margin: 20px;
 }
 
+h3 {
+  /* color: red; */
+  cursor: pointer;
+}
+
 .login-signup-buttons {
     display: flex;
     align-items: center;
@@ -43,8 +48,7 @@ h1{
 }
 
 .signup-form{
-  /* background: rgba(0, 128, 0, 0.3); */
-  /* border: 1px solid gray; */
+  
   width: 300px;
   display: flex;
   flex-direction: column;
@@ -76,48 +80,41 @@ label {
   background-color: wheat;
 }
 
+.trip-btn:hover {
+  transition: ease-out;
+  transform: scale(1.5);
+}
 
 .grid-container {
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
-/* // // grid-template-columns: repeat( auto-fit, minmax(100px, 1fr) );
-//    list-style-type: none;
-//    grid-gap: 1em;
-//     width: 100%;
-    // display: flex; */
+  grid-template-columns: repeat(6, 1fr);
     justify-content: space-evenly
 }
 
 .trip-item {
   background-color: rgba(51,51,51,0.4);
-    width: 100%;
+    width: 600px;
     padding-bottom: 5px;
     box-sizing: border-box;
     cursor: pointer;
-    display: flex;
+    display: none;
     justify-content: center;
     align-items: center;
-    /* // position: relative;
-   
-     // // height: 260px;
-    // // width: 350px;
-    // // margin-top: 10px; */
+    
     
     -webkit-font-smoothing: subpixel-antialiased;
     border-radius: 10px;
     border-width: 4px;
     border-style: solid;
     border-color: rgba(249,249,249,0.1);
-    /* // transition: ease-out;
-    // transform: scale(1.5);
-    // // -webkit-transition: transform 2s ease-in-out; */
+  
     border-image: initial;
     object-fit: cover;
-    /* width: 17%; */
+    
     backface-visibility: hidden;
     margin-bottom: 50px;
 }
 
 .hidden {
-  display: none;
+  display: flex;
 }
